prepare to unittest

--- a/Pipfile
+++ b/Pipfile
@@ -5,9 +5,11 @@ verify_ssl = true
 
 [dev-packages]
 twine = "*"
+pylint = "*"
 
 [packages]
 pandas = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.7"
